# retoro

./: .gitignore  Cargo.toml  Dockerfile-backend.build  Dockerfile-frontend.build  README.md  config.json  config.toml  docker-compose-dev.yml  docker-compose.yml  package-lock.json
.github/workflows/: backend.yml  frontend.yml  rust.yml
backend/: .env  Cargo.toml  Dockerfile.build  docker-compose.yml
backend/.sqlx/: query-01efbacf6963d920f187a1a0f081677d1ef6530eece9e863586ddc5128d93b4f.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-36776db6af4a1830725d221632d2995217497127c3468d7ee86f5790cfc774ea.json  query-4249b3b980ba5c4f23054549c3ab8d912ea4a4d50d49993dc7847d9f8d015d40.json  query-56d4d48d122c2df438b6b03d25898aa0ba7ff5389104273d982e0860c4c36474.json  query-65110ce4db1e477b917dffb1d649ed0c8dda297fdb6799e6b06c4dcb8d09083e.json  query-699262cbc7f037cb3f70ced9bb2c42d376fe3afe3577513d09ae3a537f532fe8.json  query-69e037493b68431f2656056f910b837ca8012c6eda38e3ce563e60711c24b676.json  query-7824069ee904c5f6e403acd64286858472fd2a01dab58e7a921f5019910e4185.json  query-84cf9656709bc5748710a724d1aacaebdca2e7a6842973d4d94ed8954c7006de.json  query-9d88d0a097f290d657df5c4f7dbd50e3acf980c18e4729fbaf860b5c7413dfff.json  query-b48b740942d7235bca393f656a4f3a1f1e390359c6c624eb7168484f8d219362.json  query-bca62c913201575b416010ee0efa5585cedbf6201c3adab352aef01db8f5967f.json  query-cb26570bac70325cbd36c7633f911c2827885647e78bd8c7eaf4b7b51ac83f00.json  query-e9b7b56dcb7ee5836ce74adc89c477069af442ff007ae5013b1405cfb615ad03.json  query-edf3515d7bd235094f9886c8d23b70a2f8cd522b532273ee374de3f50986405d.json
backend/migrations/: 20241030160650_init.down.sql  20241030160650_init.up.sql
backend/mock_data/: data.sql
backend/src/: main.rs
backend/src/common/: common.rs  filter.rs  id.rs  mod.rs
backend/src/post/: mod.rs  model.rs  schema.rs  service.rs
backend/src/thread/: model.rs  schema.rs  service.rs
backend/src/user/: error.rs  mod.rs  model.rs  schema.rs  service.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.tsx  style.css
frontend/src/components/: Post.tsx  PostInputDialog.tsx  PostView.tsx  Thread.tsx  ThreadInputDialog.tsx  ThreadList.tsx  ThreadSelctor.tsx  ThreadView.tsx  UserLoginDialog.tsx  UserOptionsDialog.tsx  UserPanel.tsx  UserRegisterDialog.tsx
frontend/src/pages/Home/: index.tsx  post.css  postdialog.css  style.css  threadselector.css  userlogin.css
retoro/: package-lock.json  package.json
retoro/src-tauri/: Cargo.toml  tauri.conf.json
retoro/src-tauri/src/: chat.rs  config.rs  main.rs  message.rs  network.rs  profile.rs  retoro.rs  utils.rs
retoro/src/routes/: +page.svelte
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  profile.rs  retoro.rs  utils.rs
src/retoro/: channel.rs  command.rs  common.rs  config.rs  data.rs  error.rs  event.rs  message.rs  mod.rs  node.rs  profile.rs
utils/: posts-requests.http  threads-requests.http  user-requests.http
