[package]
name = "retoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
libp2p = { version = "0.53.2", features = ["tokio", "gossipsub", "mdns", "noise", "dcutr", "macros", "tcp", "yamux","ping", "identify", "relay", "quic"] }

uuid = { version = "1.6.1", features = ["v4", "v8", "serde"] }
chrono = "0.4.31"

clap = { version = "4.4.16", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

pretty_env_logger = "0.5.0"
log = "0.4.20"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.11.23", features = ["json", "serde_json"] }
thiserror = "1.0.56"
anyhow = "1.0.79"

[dev-dependencies]
tempfile = "3.9.0"

[profile.release]
lto = true
strip = true
