[package]
name = "retoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
libp2p = { version = "0.53.2", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "dcutr",
    "macros",
    "tcp",
    "yamux",
    "ping",
    "identify",
    "relay",
    "quic",
] }

uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = "0.4.31"

serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.10"

pretty_env_logger = "0.5.0"
log = "0.4.20"
thiserror = "1.0.56"
anyhow = "1.0.79"

openssl = "0.10.63"
bincode = "1.3.3"

[profile.release]
lto = true
strip = true
