[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
] }
actix-web = "4.9.0"
anyhow = "1.0.91"
env_logger = "0.11.5"
log = "0.4.22"
serde = "1.0.214"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
actix-cors = "0.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = "0.5.3"
password-hash = "0.5.0"
thiserror = "2.0.3"
