[package]
name = "app"
version = "0.1.0"
description = "Decentralised communicator"
authors = ["Jakub Ciećka"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [] }

futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
libp2p = { version = "0.53.2", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "dcutr",
    "macros",
    "tcp",
    "yamux",
    "ping",
    "identify",
    "relay",
    "quic",
] }

uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = "0.4.31"

toml = "0.8.10"

pretty_env_logger = "0.5.0"
log = "0.4.20"
thiserror = "1.0.56"
anyhow = "1.0.79"

bincode = "1.3.3"
ed25519-dalek = { version = "2.1.1", features = ["pem", "pkcs8", "serde"] }
rand = "0.8.5"

[profile.release]
lto = true
strip = true


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
